Drop `commons-io` dependency in favor of native Java Platform functionality (#273)